data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_1993.wast
;; 4. **Test Description**: Ensure `if` block without `else` correctly manages `br_table` with some valid and some invalid indices.    - **Constraint**: Test that a missing `else` clause does not impact the handling of mixed validity `br_table` references.    - **Relation to Edge Case**: Validates mixed index handling and confirms that the presence or absence of `else` does not result in undefined behavior.

(assert_invalid
  (module (func (result i32)
    (if (result i32) (i32.const 1)
      (then (br_table 0 1 2 (i32.const 0)))
    )
  ))
  "type mismatch"
)